<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__android_large___1_ek2_color"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_weight_kg"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:background="@drawable/input_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_in_kg"
        android:inputType="numberDecimal"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_height_m"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextHeight"
        android:background="@drawable/input_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_in_meters"
        android:inputType="numberDecimal"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateBMI"
        android:text="@string/calculate_bmi"
        />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        />
</LinearLayout>
